[package]
name = "core_goko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "path_bench"
path = "benches/address_bench.rs"
harness = false