[package]
name = "goko"
version = "0.5.3"
edition = "2018"

description = "A lock-free, eventually consistent, concurrent covertree."
readme = "README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

documentation = "https://docs.rs/goko"
homepage = "https://github.com/elastic/goko"
repository = "https://github.com/elastic/goko.git"

keywords = ["cover-tree","knn","lock-free"]
categories = ["concurrency", "data-structures"]

license-file = "../LICENSE.txt"
include = ["protos/tree_file_format.proto","build.rs","src/*","Cargo.toml"]

[toolchain]
channel = "nightly"

[features]
docs-only = []


[lib]
path = "src/lib.rs"
test = true

[dependencies]
protobuf = "2.18.1"
rand = { version = "0.7.3", features = ["small_rng"]}
rand_distr = "0.3.0"
yaml-rust = "0.4.4"
pbr = "1.0.3"
fxhash = "0.2.1"
rayon = "1.5.0"
hashbrown = { version = "0.9.1", features = ["rayon"] }
crossbeam-channel = "0.5.0"
pointcloud = { version = "0.5.0", path = "../pointcloud" }
serde = { version = "1.0.117", features = ["derive"] }
#evmap = { git = "https://github.com/comath/rust-evmap" }
smallvec = "1.5.0"
type-map = "0.3.0"
statrs = "0.13.0"
ndarray = "0.14.0"

[dev-dependencies]
criterion = "0.3"
assert_approx_eq = "1.0.0"

[[bench]]
name = "path_bench"
path = "benches/path_bench.rs"
harness = false

[build-dependencies]
protoc-rust = "2.18.1"

[package.metadata.docs.rs]
features = [ "docs-only" ]