[package]
name = "goko"
version = "0.5.4"
edition = "2018"

description = "A lock-free, eventually consistent, concurrent covertree."
readme = "README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

documentation = "https://docs.rs/goko"
homepage = "https://github.com/elastic/goko"
repository = "https://github.com/elastic/goko.git"

keywords = ["cover-tree","knn","lock-free"]
categories = ["concurrency", "data-structures"]

license-file = "../LICENSE.txt"
include = ["protos/tree_file_format.proto","build.rs","src/*","Cargo.toml"]

[toolchain]
channel = "nightly"

[features]
docs-only = []


[lib]
path = "src/lib.rs"
test = true

[dependencies]
protobuf = "2.23.0"
rand = { version = "0.8.3", features = ["small_rng"]}
rand_distr = "0.4.0"
yaml-rust = "0.4.5"
pbr = "1.0.4"
fxhash = "0.2.1"
rayon = "1.5.0"
hashbrown = { version = "0.11.2", features = ["rayon"] }
crossbeam-channel = "0.5.1"
pointcloud = { path = "../pointcloud" }
stats_goko = { path = "../stats_goko" }
core_goko = { path = "../core_goko" }
serde = { version = "1.0.125", features = ["derive"] }
smallvec = "1.6.1"
type-map = "0.5.0"
statrs = "0.13.0"
ndarray = "0.15.3"

[dev-dependencies]
criterion = "0.3.4"
assert_approx_eq = "1.0.0"
lightgbm = "0.2.3"
serde_json = "1.0"

[[bench]]
name = "path_bench"
path = "benches/path_bench.rs"
harness = false

[build-dependencies]
protoc-rust = "2.23.0"

[package.metadata.docs.rs]
features = [ "docs-only" ]