[package]
name = "grandma"
version = "0.1.3"
edition = "2018"

description = "A lock-free, eventually consistent, concurrent covertree."
readme = "../README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

documentation = "https://docs.rs/grandma"
homepage = "https://github.com/elastic/grandma"
repository = "https://github.com/elastic/grandma.git"

keywords = ["cover-tree","knn","lock-free"]
categories = ["concurrency", "data-structures"]

license-file = "../LICENSE.txt"
include = ["protos/tree_file_format.proto","build.rs","src/*","Cargo.toml"]

[features]
docs-only = []

[lib]
path = "src/lib.rs"
test = true

[dependencies]
protobuf = "2.10"
rand = "0.7.3"
yaml-rust = "0.4"
pbr = "1.0.2"
rayon = "1.3"
indexmap = {version = "1.0.2", features = ["serde-1"]}
crossbeam-channel = "0.4.2"
pointcloud = { version = "0.1.0" }
#evmap = { git = "https://github.com/comath/rust-evmap" }
smallvec = "1.0"

[dev-dependencies]
assert_approx_eq = "1.0.0"

[build-dependencies]
protoc-rust = "2.0"

[package.metadata.docs.rs]
features = [ "docs-only" ]