[package]
name = "grandma"
version = "0.1.0"
edition = "2018"

description = "A lock-free, eventually consistent, concurrent covertree."
readme = "../README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

documentation = "https://docs.rs/grandma"
homepage = "https://github.com/comath/grandma"
repository = "https://github.com/comath/grandma.git"

keywords = ["cover-tree","knn","lock-free"]
categories = ["concurrency", "data-structures"]

exclude = [
    "protos/*",
]

license = "Apache-2.0"

[dependencies]
protobuf = "2.10"
rand = "*"
yaml-rust = "0.4"
pbr = "*"
rayon = "1.3"
indexmap = {version = "1.0.2", features = ["serde-1"]}
crossbeam-channel = "*"
pointcloud = { version = "0.1.0", path = "../pointcloud/" }
#evmap = { git = "https://github.com/comath/rust-evmap" }
smallvec = "1.0"
anymap = "0.12.1"

[dev-dependencies]
assert_approx_eq = "1.0.0"

[build-dependencies]
protoc-rust = "2.0"
