[package]
name = "grandma"
version = "0.3.0"
edition = "2018"

description = "A lock-free, eventually consistent, concurrent covertree."
readme = "README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

documentation = "https://docs.rs/grandma"
homepage = "https://github.com/elastic/grandma"
repository = "https://github.com/elastic/grandma.git"

keywords = ["cover-tree","knn","lock-free"]
categories = ["concurrency", "data-structures"]

license-file = "../LICENSE.txt"
include = ["protos/tree_file_format.proto","build.rs","src/*","Cargo.toml"]

[toolchain]
channel = "nightly"

[features]
docs-only = []


[lib]
path = "src/lib.rs"
test = true

[dependencies]
protobuf = "2.15.0"
rand = "0.7.3"
yaml-rust = "0.4"
pbr = "1.0.2"
rayon = "1.3.1"
indexmap = {version = "1.0.2", features = ["serde-1"]}
crossbeam-channel = "0.4.2"
pointcloud = { version = "0.3.0", path = "../pointcloud" }
#evmap = { git = "https://github.com/comath/rust-evmap" }
smallvec = "1.3.0"
type-map = "0.3.0"
statrs = "0.12.0"

[dev-dependencies]
assert_approx_eq = "1.0.0"

[build-dependencies]
protoc-rust = "2.15.0"

[package.metadata.docs.rs]
features = [ "docs-only" ]