[package]
name = "pointcloud"
version = "0.3.4"
edition = "2018"

description = "An accessor layer for goko"
readme = "README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

documentation = "https://docs.rs/pointcloud"
homepage = "https://github.com/elastic/goko"
repository = "https://github.com/elastic/goko.git"

license-file = "../LICENSE.txt"

keywords = ["datasets"]
categories = ["science", "data-structures"]

[badges]
travis-ci = { repository = "https://github.com/elastic/goko.git", branch = "master" }

[toolchain]
channel = "nightly"

[dependencies]
csv = "1"
libc = "0.2.72"
yaml-rust = "0.4"
rayon = "1.3.1"
packed_simd = "0.3.3"
glob = "0.3.0"
fxhash = "0.2.1"
hashbrown = { version = "0.8", features = ["rayon", "serde"] }
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
flate2 = "1.0.16"
rand = "0.7.3"
smallvec = { version = "1.3.0", features = ["serde"] }
num-traits = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["basetsd", "handleapi", "memoryapi", "minwindef", "std", "sysinfoapi"] }

[dev-dependencies]
tempdir = "0.3"
assert_approx_eq = "1.0.0"
