[package]
name = "pointcloud"
version = "0.5.4"
edition = "2018"

description = "An accessor layer for goko"
readme = "README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

documentation = "https://docs.rs/pointcloud"
homepage = "https://github.com/elastic/goko"
repository = "https://github.com/elastic/goko.git"

license-file = "../LICENSE.txt"

keywords = ["datasets"]
categories = ["science", "data-structures"]

[badges]
travis-ci = { repository = "https://github.com/elastic/goko.git", branch = "master" }

[toolchain]
channel = "nightly"

[features]
default = []

[dependencies]
csv = "1"
libc = "0.2.77"
yaml-rust = "0.4"
rayon = "1.4.0"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
glob = "0.3.0"
fxhash = "0.2.1"
hashbrown = { version = "0.9.0", features = ["rayon", "serde"] }
serde_json = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }
flate2 = "1.0.17"
rand = "0.7.3"
smallvec = { version = "1.3.0", features = ["serde"] }
num-traits = "0.2"
ndarray = "0.14.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["basetsd", "handleapi", "memoryapi", "minwindef", "std", "sysinfoapi"] }

[dev-dependencies]
tempdir = "0.3"
criterion = "0.3"
assert_approx_eq = "1.0.0"

[[bench]]
name = "dists_bench"
path = "benches/dists_bench.rs"
harness = false
