[package]
name = "pygoko"
version = "0.3.1"
edition = "2018"

description = "An python interface for goko"
readme = "../README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

documentation = "https://docs.rs/goko"
homepage = "https://github.com/elastic/goko"
repository = "https://github.com/elastic/goko.git"

license = "Apache-2.0"

[badges]
travis-ci = { repository = "https://github.com/elastic/goko.git", branch = "master" }

[toolchain]
channel = "nightly"

[dependencies]
goko = { path = "../goko" }
pointcloud = { path = "../pointcloud" }
pyo3 = { version = "0.11.1", features = ["extension-module"] }
numpy = "0.9.0"
ndarray = "0.13.1"
rayon = "1.3.1"
rustc-hash = "1.1.0"

[lib]
name = "pygoko"
crate-type = ["cdylib"]
