[package]
name = "pygoko"
version = "0.4.1"
edition = "2018"

description = "An python interface for goko"
readme = "../README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

documentation = "https://docs.rs/goko"
homepage = "https://github.com/comath/goko"
repository = "https://github.com/comath/goko.git"

license = "Apache-2.0"

[badges]
travis-ci = { repository = "https://github.com/comath/goko.git", branch = "master" }

[toolchain]
channel = "nightly"

[dependencies]
goko = { path = "../goko" }
pointcloud = { path = "../pointcloud" }
pyo3 = { version = "0.14.3", features = ["extension-module"] }
numpy = "0.14.1"
ndarray = "0.15.3"
rayon = "1.4.0"
rustc-hash = "1.1.0"
rand = { version = "0.8.3", features = ["small_rng"]}

[lib]
name = "pygoko"
crate-type = ["cdylib"]
