[package]
name = "pygrandma"
version = "0.3.1"
edition = "2018"

description = "An python interface for grandma"
readme = "../README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

documentation = "https://docs.rs/grandma"
homepage = "https://github.com/elastic/grandma"
repository = "https://github.com/elastic/grandma.git"

license = "Apache-2.0"

[badges]
travis-ci = { repository = "https://github.com/elastic/grandma.git", branch = "master" }

[toolchain]
channel = "nightly"

[dependencies]
grandma = { path = "../grandma" }
pointcloud = { path = "../pointcloud" }
pyo3 = { version = "0.10.1", features = ["extension-module"] }
numpy = "0.9.0"
ndarray = "0.13.1"
rayon = "1.3.1"
rustc-hash = "1.1.0"

[lib]
name = "pygrandma"
crate-type = ["cdylib"]
