[package]
name = "serve_goko"
version = "0.1.0"
authors = ["sven <sven@endgame.com>"]
edition = "2018"

[dependencies]
futures-util = { version = "0.3", default-features = false }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
http = "0.2.3"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tokio = { version = "1.1.1", features = ["full"] }
goko = { path = "../goko" }
pointcloud = { path = "../pointcloud" }
serde_json = "1.0.61"
serde = { version = "1.0.123", features = ["derive"] }
indexmap = {version = "1.0.2", features = ["serde-1"]}
rayon = "*"
clap = "2.33.0"
futures = "0.3.12"
flate2 = "1.0.20"
lazy_static = "*"
rmp = "0.8.7"
regex = "1.4.3"
base64 = "*"