[package]
name = "stats_goko"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
statrs = "0.13.0"
rand = { version = "0.8.3", features = ["small_rng"]}
rand_distr = "0.4.0"
core_goko = { path = "../core_goko" }
fxhash = "0.2.1"
serde = { version = "1.0.125", features = ["derive"] }
smallvec = "1.6.1"

[dev-dependencies]
criterion = "0.3.4"
assert_approx_eq = "1.0.0"

[[bench]]
name = "path_bench"
path = "benches/categorical_bench.rs"
harness = false